--- a/app/views/general/_header.html.erb
+++ b/app/views/general/_header.html.erb
@@ -9,8 +9,8 @@
 
             <% if @user %>
                 <%=link_to _("My requests"), show_user_requests_path(:url_name => @user.url_name) %>
-                <%=link_to _("My profile"), show_user_profile_path(:url_name => @user.url_name) %>
-                <%=link_to _("My wall"), show_user_wall_path(:url_name => @user.url_name) %>
+                <%=link_to _("Профіль"), show_user_profile_path(:url_name => @user.url_name) %>
+                <%=link_to _("Стіна"), show_user_wall_path(:url_name => @user.url_name) %>
             <% end %>
 
 
