--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,6 +11,7 @@
 
     </head>
     <body class="admin">
+    	<%= tinymce_assets %>
       <div id="main" class="container">
         <%= render :partial => 'admin_general/admin_navbar' %>
         <% if flash[:error] %>
