--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -8,7 +8,7 @@
 
       <%= javascript_include_tag "admin" %>
       <%= stylesheet_link_tag "admin", :title => "Main", :rel => "stylesheet" %>
-
+<%= tinymce_assets %>
     </head>
     <body class="admin">
     	<%= tinymce_assets %>
