--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -20,6 +20,10 @@
         <% end %>
 
         <%= javascript_include_tag "application" %>
+        
+<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.2/masonry.pkgd.min.js"></script>
+
+
 
         <% if @profile_photo_javascript %>
             <%= javascript_include_tag "profile-photos" %>
