fonts, fix header

--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -71,3 +71,15 @@
 
 }
 
+@font-face {
+    font-family: 'HelveticaNeue';
+    src: font-url('HelveticaNeue.eot');
+    src: font-url('HelveticaNeue.eot?#iefix') format('embedded-opentype'),
+         font-url('HelveticaNeue.woff') format('woff'),
+         font-url('HelveticaNeue.ttf') format('truetype'),
+         font-url('HelveticaNeue.svg#HelveticaNeue') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
